--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,12 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "react/react-in-jsx-scope": 0,
     "react/jsx-one-expression-per-line": 0,
-    "import/no-unresolved": "error"
+    "import/no-unresolved": "error",
+    "react/function-component-definition": 0,
+    "@typescript-eslint/naming-convention": 0,
+    " @typescript-eslint/no-unsafe-return": 0,
+    " @typescript-eslint/no-unnecessary-type-assertion": 0
   }
 }
