--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,9 @@
     "react/function-component-definition": 0,
     "@typescript-eslint/naming-convention": 0,
     " @typescript-eslint/no-unsafe-return": 0,
-    " @typescript-eslint/no-unnecessary-type-assertion": 0
+    " @typescript-eslint/no-unnecessary-type-assertion": 0,
+    "no-unsafe-optional-chaining": 0,
+    "react/jsx-props-no-spreading": 0,
+    "no-debugger": "warn"
   }
 }
