--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,13 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+
+  "include": ["src/**/*", "./jest.config.js", ".env", "./react-app-env.d.ts"]
 }
